Fixed bug in RNNs

--- a/RNNs.ipynb
+++ b/RNNs.ipynb
@@ -165,7 +165,7 @@
     "    end\n",
     "    push!(losses, sum_ℒ)\n",
     "    print(\"epoch: $(epoch), loss: $(sum_ℒ)\")\n",
-    "endspark"
+    "end"
    ]
   },
   {
